--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -223,7 +223,55 @@
                       <div class="itemBoxTable__bodyCellInner">lorem ipsum dolor sit amet</div>
                   </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 3;" data-flex="3">
-                      <div class="itemBoxTable__bodyCellInner">34342-34252345-342543523-343213124</div>
+                      <div class="itemBoxTable__bodyCellInner">
+
+                        <div class="pmx-field">
+                          <div class="pmx-field__inner">
+                            <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--multiSelect">
+                              <div class="pmx-selector__item  pmx-selector__item--selected JS_selectorItem">
+                                <div class="pmx-selector__block">
+                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0bda51; color: #FFF;">ग़</span>
+                                  <span class="pmx-selector__blockSeperator"></span>
+                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--label">design</span>
+                                  <span class="pmx-selector__blockSeperator"></span>
+                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--field">UI/UX</span>
+                                </div>
+                              </div>
+                              <span class="pmx-selector__itemSeperator"></span>
+                              <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                                <div class="pmx-selector__block">
+                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: orange; color: #FFF;">ग़</span>
+                                  <span class="pmx-selector__blockSeperator"></span>
+                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--label">comp</span>
+                                  <span class="pmx-selector__blockSeperator"></span>
+                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--field">IT</span>
+                                </div>
+                              </div>
+                              <span class="pmx-selector__itemSeperator"></span>
+                              <div class="pmx-selector__item JS_selectorItem">
+                                <div class="pmx-selector__block">
+                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: blue; color: #FFF;">ग़</span>
+                                  <span class="pmx-selector__blockSeperator"></span>
+                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--label">dev</span>
+                                  <span class="pmx-selector__blockSeperator"></span>
+                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Back-end</span>
+                                </div>
+                              </div>
+                              <span class="pmx-selector__itemSeperator"></span>
+                              <div class="pmx-selector__item JS_selectorItem">
+                                <div class="pmx-selector__block">
+                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #f4ca16; color: #FFF;">ग़</span>
+                                  <span class="pmx-selector__blockSeperator"></span>
+                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--label">status</span>
+                                  <span class="pmx-selector__blockSeperator"></span>
+                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Important</span>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+
+                      </div>
                   </li>
               </ul>
               <div class="itemBox itemBox--children">
