--- a/sass/components/selector.scss
+++ b/sass/components/selector.scss
@@ -95,7 +95,6 @@
     height: 26px;
     min-width: 26px;
     max-width: 100%;
-    padding: 2px 3px;
     border-radius: 15px;
     overflow: hidden;
     font-size: 16px;
@@ -129,14 +128,33 @@
     }
 
     &Seperator {
+      /*
       position: relative;
       display: inline-block;
       border-right: 1px dashed #979797;
       z-index: 0;
       height: 30px;
-      /* background-image: linear-gradient(0deg, #7e7e7e, #7e7e7e 50%, transparent 50%, transparent 100%); */
-      /* background-size: 1px 12px; */
+      background-image: linear-gradient(0deg, #7e7e7e, #7e7e7e 50%, transparent 50%, transparent 100%);
+      background-size: 1px 12px;
       top: -2px;
+      */
+
+      position: relative;
+      display: inline-block;
+      z-index: 0;
+      height: 26px;
+      text-transform: uppercase;
+      color: #808080;
+      font-size: 10px;
+      font-weight: 600;
+      letter-spacing: .7px;
+      vertical-align: top;
+      line-height: 28px;
+      padding: 0 1px;
+
+      &Label {
+        padding: 0 10px;
+      }
     }
 
     &--selected {
@@ -161,8 +179,7 @@
 
   &__block {
     position: relative;
-    height: 22px;
-    padding: 2px 4px;
+    height: 26px;
     display: flex;
     font-family: 'tenforce', sans-serif;
     align-items: center;
@@ -174,7 +191,6 @@
     &Part {
       position: relative;
       display: inline-block;
-      padding: 0 3px;
 
       /*
       background-color: #0080004d;
@@ -182,18 +198,13 @@
 
       &--prefix {
         border-radius: 15px;
-        padding: 1px 5px;
-        min-height: 20px;
-        min-width: 20px;
+        border-radius: 15px 0 0 15px;
+        min-height: 26px;
+        min-width: 26px;
         text-align: center;
-
         font-family: 'tenforce', sans-serif;
-
-        + .pmx-selector__blockSeperator {
-          margin: 0 2px;
-          height: 16px;
-          border-right: 1px dotted transparent;
-        }
+        line-height: 25px;
+        padding: 0 10px;
       }
 
       &--label  {
@@ -202,9 +213,10 @@
         font-size: 10px;
         font-weight: 600;
         letter-spacing: .7px;
+        padding: 0 10px;
 
         + .pmx-selector__blockSeperator {
-          margin: 0 2px;
+          margin: -3px;
           height: 16px;
           border-right: 1px dotted #D5D5D5;
         }
@@ -215,20 +227,23 @@
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
+        padding: 0 10px;
       }
     }
   }
 
   &--expanded {
-    &.pmx-selector--toggleSelect {
-      /*
-      height: auto;
-      white-space: normal;
-      */
-    }
+  }
+
+  &--collapsed {
+    background: none;
+    background-color: transparent;
+    border: 2px solid transparent;
   }
 
   &--readonly {
+    overflow: hidden;
+
     .pmx-selector__item {
       background-color: #FFF;
       box-shadow: none;
@@ -257,6 +272,10 @@
       &:first-child {
         border-top-left-radius: 30px;
         border-bottom-left-radius: 30px;
+
+        .pmx-selector__blockPart--prefix {
+          border-radius: 15px 0 0 15px;
+        }
       }
 
       &:last-child {
@@ -264,15 +283,12 @@
         border-bottom-right-radius: 30px;
         margin: 0;
       }
+
+      .pmx-selector__blockPart--prefix {
+        border-radius: 0;
+      }
     }
   }
 
-  &--collapsed {
-    background: none;
-    background-color: transparent;
-    border: 2px solid transparent;
-  }
 
-  &--expanded {
-  }
 }
