--- a/sass/components/selector.scss
+++ b/sass/components/selector.scss
@@ -65,6 +65,13 @@
 
   &__value {
     position: relative;
+    font-size: 16px;
+    line-height: 40px;
+    margin: -5px;
+
+    .pmx-selector {
+      margin: 5px;
+    }
 
     input {
       width: 100%;
@@ -141,19 +148,18 @@
 
       position: relative;
       display: inline-block;
-      z-index: 0;
       height: 26px;
-      text-transform: uppercase;
-      color: #808080;
-      font-size: 10px;
-      font-weight: 600;
-      letter-spacing: .7px;
       vertical-align: top;
-      line-height: 28px;
       padding: 0 1px;
 
       &Label {
+        text-transform: uppercase;
+        color: #808080;
+        font-size: 11px;
+        font-weight: 700;
+        letter-spacing: 1px;
         padding: 0 10px;
+        line-height: 28px;
       }
     }
 
@@ -203,22 +209,22 @@
         min-width: 26px;
         text-align: center;
         font-family: 'tenforce', sans-serif;
-        line-height: 25px;
+        line-height: 27px;
         padding: 0 10px;
       }
 
       &--label  {
         text-transform: uppercase;
         color: #808080;
-        font-size: 10px;
-        font-weight: 600;
-        letter-spacing: .7px;
+        font-size: 11px;
+        font-weight: 700;
+        letter-spacing: 1px;
         padding: 0 10px;
 
         + .pmx-selector__blockSeperator {
           margin: -3px;
           height: 16px;
-          border-right: 1px dotted #D5D5D5;
+          border-right: 1px dotted #CDCDCD;
         }
       }
 
