--- a/sass/components/selector.scss
+++ b/sass/components/selector.scss
@@ -23,11 +23,9 @@
       font-size: 12px;
       box-shadow: 0 0 200px 60px rgba(0, 0, 0, 0.2);
       background-color: #FFF;
-
       z-index: -1;
       pointer-events: none;
       opacity: 0;
-
       transition: all .3s ease-in-out;
     }
   }
@@ -57,7 +55,6 @@
     text-transform: uppercase;
     letter-spacing: 1px;
     color: #B1B1B1;
-
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -68,6 +65,7 @@
     font-size: 16px;
     line-height: 40px;
     margin: -5px;
+    white-space: nowrap;
 
     .pmx-selector {
       margin: 5px;
@@ -84,9 +82,7 @@
   display: inline-block;
   height: 30px;
   background-color: #D7D7D7;
-
   border: 2px solid #D7D7D7;
-
   color: #000;
   border-radius: 15px;
   font-size: 0;
@@ -107,12 +103,10 @@
     font-size: 16px;
     cursor: pointer;
     transition: all .3s ease-in-out;
-    opacity: .5;
-    -webkit-filter: saturate(0) brightness(0.8) contrast(1.3);
-    filter: saturate(0) brightness(0.8) contrast(1.3);
+    -webkit-filter: saturate(0.5) opacity(0.5);
+    filter: saturate(0.5) opacity(0.5);
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-
     vertical-align: top;
 
     &:first-child {
@@ -136,22 +130,10 @@
     }
 
     &:hover {
-      opacity: .7;
-      filter: saturate(1) brightness(1);
+      filter: saturate(1) opacity(.8);
     }
 
     &Seperator {
-      /*
-      position: relative;
-      display: inline-block;
-      border-right: 1px dashed #979797;
-      z-index: 0;
-      height: 30px;
-      background-image: linear-gradient(0deg, #7e7e7e, #7e7e7e 50%, transparent 50%, transparent 100%);
-      background-size: 1px 12px;
-      top: -2px;
-      */
-
       position: relative;
       display: inline-block;
       height: 26px;
@@ -196,17 +178,9 @@
     font-family: 'tenforce', sans-serif;
     align-items: center;
 
-    /*
-    background-color: #ff66005e;
-    */
-
     &Part {
       position: relative;
       display: inline-block;
-
-      /*
-      background-color: #0080004d;
-      */
 
       &--prefix {
         border-radius: 15px;
@@ -301,6 +275,4 @@
       }
     }
   }
-
-
 }
