--- a/_includes/blocks/breadcrumbs.html
+++ b/_includes/blocks/breadcrumbs.html
@@ -1,3 +1,4 @@
+<!--
 <div class="breadcrumbs">
   <div class="breadcrumbs__item">
     <div class="breadcrumbs__link"><span class="breadcrumbs__type">Bril</span> <span class="breadcrumbs__label">Jaarplan 2016 - Staf</span></div>
@@ -54,5 +55,69 @@
         <li>Wiki</li>
       </ul>
     </div>
+  </div>
+</div>
+-->
+
+<div class="itemBox">
+  <div class="itemBoxTable">
+      <div class="itemBoxBody">
+        <ul class="itemBoxTable__bodyRow">
+          <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+            <div class="itemBoxTable__bodyCellInner">
+
+              <div class="pmx-field">
+                <div class="pmx-field__inner">
+                  <div class="pmx-selector pmx-selector--collapsed">
+                    <div class="pmx-selector__item">
+                      <div class="pmx-selector__block ">
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Bril</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Jaarplan 2016 - Staf</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </li>
+          <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+            <div class="itemBoxTable__bodyCellInner">
+
+              <div class="pmx-field">
+                <div class="pmx-field__inner">
+                  <div class="pmx-selector pmx-selector--collapsed">
+                    <div class="pmx-selector__item">
+                      <div class="pmx-selector__block ">
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Doelstelling</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">De aanbevelingen van Audit Vlaanderen m.b.t. organisatiebeheersing uitvoeren</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </li>
+          <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+            <div class="itemBoxTable__bodyCellInner">
+
+              <div class="pmx-field">
+                <div class="pmx-field__inner">
+                  <div class="pmx-selector pmx-selector--collapsed">
+                    <div class="pmx-selector__item">
+                      <div class="pmx-selector__block ">
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Project</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">D06.0/P03 - Een monitoringsysteem uitbouwen voor de opvolging en bijsturing van</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </li>
+        </ul>
+      </div>
   </div>
 </div>
