Components/tags: fixed showing the good popup

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -95,6 +95,9 @@
   <!-- new SingleSelect -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newSingleSelect.js"></script>
 
+  <!-- colorpicker -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/colorselector.js"></script>
+
   <!-- filters -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
 {% endif %}
