tag-picker: made tags to be the same as in the external components

--- a/_includes/popups/multiSelector-tags-colors.html
+++ b/_includes/popups/multiSelector-tags-colors.html
@@ -1,6 +1,6 @@
 <div class="multiSelector multiSelector--popup" id="multiSelector-tagpicker">
 
-  <div class="itemBox JS_multiSelector__box">
+  <div class="itemBox JS_multiSelector__box ">
     <div class="itemBoxTable">
       <div class="itemBoxBody">
         <ul class="itemBoxTable__bodyRow">
@@ -51,12 +51,58 @@
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                    <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #f4ca16;" data-color="#f4ca16">ग़</i>
+                  </div>
+                </li>
+                <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
+                    dev-team
+                  </div>
+                </li>
+                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable ui-sortable-handle" style="flex-grow: 0;" data-flex="0">
+                  <div class="itemBoxTable__bodyCellInner">
+                    <i class="itemBoxTable__action itemBoxTable__action--drag">އ</i>
+                  </div>
+                </li>
+                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
+                  <div class="itemBoxTable__bodyCellInner">
+                    <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
+                  </div>
+                </li>
+              </ul>
+              {% include blocks/ms-tags-colors-color-sublist.html %}
+              <ul class="itemBoxTable__bodyRow JS_filterableCell">
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                    <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #e30022;" data-color="#e30022">ग़</i>
+                  </div>
+                </li>
+                <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
+                    back-end
+                  </div>
+                </li>
+                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable ui-sortable-handle" style="flex-grow: 0;" data-flex="0">
+                  <div class="itemBoxTable__bodyCellInner">
+                    <i class="itemBoxTable__action itemBoxTable__action--drag">އ</i>
+                  </div>
+                </li>
+                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
+                  <div class="itemBoxTable__bodyCellInner">
+                    <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
+                  </div>
+                </li>
+              </ul>
+              {% include blocks/ms-tags-colors-color-sublist.html %}
+              <ul class="itemBoxTable__bodyRow JS_filterableCell">
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
                     <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #0bda51;" data-color="#0bda51">ग़</i>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
-                    xamarin_tablet
+                    282
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable ui-sortable-handle" style="flex-grow: 0;" data-flex="0">
@@ -110,7 +156,7 @@
                 </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
-                    xamarin_tablet
+                    282
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
@@ -129,7 +175,7 @@
                   </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
-                    xamarin_mobile
+                    272
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
@@ -148,12 +194,12 @@
                   </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
-                    2013_Maintenance
+                    dev-team
                   </div>
                 </li>
-                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
+                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action itemBoxTable__action--add">ބ</i>
+                    <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
                   </div>
                 </li>
               </ul>
@@ -167,12 +213,12 @@
                   </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
-                    workaround_available
+                    back-end
                   </div>
                 </li>
-                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
+                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action itemBoxTable__action--add">ބ</i>
+                    <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
                   </div>
                 </li>
               </ul>
