Multiselector-1: fix closing when clicking into input field

--- a/_includes/popups/multiSelector-status.html
+++ b/_includes/popups/multiSelector-status.html
@@ -11,7 +11,7 @@
       </div>
     </div>
 
-    <div class="itemBox JS_multiSelector__boxx">
+    <div class="itemBox JS_multiSelector__box">
       <div class="itemBoxTable">
         <div class="itemBoxBody">
           <ul class="itemBoxTable__bodyRow">
