added incl/excl dropdown toggle

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -81,7 +81,7 @@
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
 {% endif %}
 
-{% if page.title == 'Components' %}
+{% if page.title == 'Components' or page.title == 'Filter' %}
   <!-- expand-collapse -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
@@ -100,6 +100,7 @@
 
   <!-- filters -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/incl-excl-filter.js"></script>
 {% endif %}
 
 {% if page.title == 'Popups' %}
