--- a/sass/components/selector.scss
+++ b/sass/components/selector.scss
@@ -32,9 +32,7 @@
 
   &__inner {
     position: relative;
-    overflow: hidden;
     padding: 5px;
-    line-height: initial;
 
     &::after {
       content: '';
@@ -43,21 +41,21 @@
       right: 0;
       width: 30px;
       height: 100%;
-      background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, white 60%, white 100%);
+      background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.6) 60%, rgb(255, 255, 255) 100%);
       pointer-events: none;
     }
   }
 
   &__label {
-    line-height: initial;
-    font-size: 10px;
-    font-weight: 600;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    color: #B1B1B1;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+
+    font-size: 12px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: #808080;
   }
 
   &__value {
@@ -94,6 +92,7 @@
 
   &__item {
     position: relative;
+    z-index: 1;
     display: inline-block;
     height: 26px;
     min-width: 26px;
@@ -115,6 +114,13 @@
       .pmx-selector__block  {
         border-top-left-radius: 15px;
         border-bottom-left-radius: 15px;
+
+        &Part {
+          &:first-child {
+            border-top-left-radius: 15px;
+            border-bottom-left-radius: 15px;
+          }
+        }
       }
     }
 
@@ -123,47 +129,51 @@
         border-top-right-radius: 15px;
         border-bottom-right-radius: 15px;
 
-        &Part:last-child {
-          &.pmx-selector__blockPart--prefix {
-            border-radius: 0 15px 15px 0;
+        &Part {
+          &:last-child {
+            border-top-right-radius: 15px;
+            border-bottom-right-radius: 15px;
           }
         }
       }
     }
 
     &:hover {
-      filter: saturate(1) opacity(.8);
+      -webkit-filter: saturate(0.8) opacity(0.8);
+      filter: saturate(0.8) opacity(0.8);
     }
 
     &Seperator {
+      position: relative;
+      z-index: 0;
       display: inline-block;
       height: 26px;
-      min-width: 2px;
+      min-width: 8px;
       background-color: #D7D7D7;
+      border-radius: 3px;
+      margin: 0 -3px;
 
       &Label {
-        text-transform: uppercase;
-        color: #808080;
-        font-size: 11px;
-        font-weight: 700;
-        letter-spacing: 1px;
         padding: 0 10px;
         line-height: 28px;
+
+        font-size: 12px;
+        font-weight: 600;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        color: #808080;
       }
     }
 
     &--selected {
       background-color: #FFF;
       box-shadow: 0 3px 10px rgba(0,0,0,.2);
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.23);
-      opacity: 1;
-      -webkit-filter: saturate(1) brightness(1) contrast(1);
-      filter: saturate(1) brightness(1) contrast(1);
+      -webkit-filter: saturate(1) opacity(1);
+      filter: saturate(1) opacity(1);
 
       &:hover {
-        background-color: #FFF;
-        box-shadow: 0 3px 10px rgba(0,0,0,.2);
-        opacity: 1;
+        -webkit-filter: saturate(1) opacity(1);
+        filter: saturate(1) opacity(1);
       }
 
       .pmx-selector__blockPart--field {
@@ -178,43 +188,43 @@
     display: flex;
     font-family: 'tenforce', sans-serif;
     align-items: center;
+    border-radius: 3px;
 
     &Part {
       position: relative;
+      z-index: 1;
       display: inline-block;
+      max-width: 300px;
+      height: 26px;
+      padding: 0 10px;
+      border-radius: 3px;
+      line-height: 27px;
+      background-color: #FFF;
+
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
 
       &--prefix {
-        border-radius: 15px;
-        border-radius: 15px 0 0 15px;
-        min-height: 26px;
-        min-width: 26px;
-        text-align: center;
-        font-family: 'tenforce', sans-serif;
-        line-height: 27px;
-        padding: 0 10px;
       }
 
       &--label  {
         text-transform: uppercase;
         color: #808080;
-        font-size: 11px;
-        font-weight: 700;
+        font-size: 12px;
+        font-weight: 600;
         letter-spacing: 1px;
-        padding: 0 10px;
 
         + .pmx-selector__blockSeperator {
+          position: relative;
+          z-index: 2;
           margin: -3px;
           height: 16px;
-          border-right: 1px dotted #CDCDCD;
+          border-right: 1px dotted #b9b9b9;
         }
       }
 
       &--field {
-        max-width: 300px;
-        overflow: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        padding: 0 10px;
       }
     }
   }
@@ -234,8 +244,9 @@
     .pmx-selector__item {
       background-color: #FFF;
       box-shadow: none;
-      opacity: 1;
-      filter: saturate(1) brightness(1);
+      cursor: text;
+      -webkit-filter: saturate(1) opacity(1);
+      filter: saturate(1) opacity(1);
 
       &:hover {
         background-color: #FFF;
@@ -249,30 +260,33 @@
   }
 
   &--toggleSelect {
+    .pmx-selector__blockPart {
+      background-color: rgba(255,255,255,0);
+    }
   }
 
   &--multiSelect {
     .pmx-selector__item {
       overflow: visible;
-      border-radius: 0;
 
       &:first-child {
         border-top-left-radius: 30px;
         border-bottom-left-radius: 30px;
 
         .pmx-selector__blockPart--prefix {
-          border-radius: 15px 0 0 15px;
+          &:first-child {
+            border-radius: 15px 3px 3px 15px;
+          }
         }
       }
 
       &:last-child {
         border-top-right-radius: 30px;
         border-bottom-right-radius: 30px;
-        margin: 0;
       }
 
       .pmx-selector__blockPart--prefix {
-        border-radius: 0;
+        border-radius: 3px;
       }
     }
   }
