--- a/sass/components/selector.scss
+++ b/sass/components/selector.scss
@@ -108,7 +108,7 @@
     }
   }
 
-  &--multiSelect {
+  &--multiselect {
     .pmx-selector__item {
       overflow: visible;
     }
@@ -129,7 +129,16 @@
     vertical-align: top;
 
     background-color: #FFF;
-    filter: saturate(.7) opacity(.7);
+    filter: saturate(0.4) opacity(0.4);
+
+    &--selected {
+      box-shadow: 0 2px 8px -2px rgba(0,0,0,0.7);
+      filter: saturate(1) opacity(1);
+    }
+
+    &:hover {
+      filter: saturate(0.7) opacity(0.7);
+    }
 
     &:first-child {
       .pmx-selector__block  {
@@ -182,11 +191,6 @@
         padding: 0 8px;
       }
     }
-
-    &--selected {
-      box-shadow: 0 2px 8px -2px rgba(0,0,0,0.7);
-      filter: saturate(1) opacity(1);
-    }
   }
 
   &__block {
@@ -201,6 +205,7 @@
       position: relative;
       z-index: 1;
       display: inline-block;
+      min-width: 36px;
       max-width: 300px;
       height: 26px;
       padding: 0 10px;
@@ -210,6 +215,10 @@
       text-overflow: ellipsis;
 
       background-color: #FFF;
+
+      &--prefix {
+        text-align: center;
+      }
 
       &--label  {
         text-transform: uppercase;
