bigger flex for incl/exclude

--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -127,9 +127,9 @@
           <div class="itemBoxTable">
             <div class="itemBoxBody">
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 0;" data-flex="0">
+                <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 0.05;" data-flex="0.05">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
-                    <i class="itemBoxTable__action itemBoxTable__action--toggle">Incl</i>
+                    <i class="itemBoxTable__action itemBoxTable__action--toggle">Include</i>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
@@ -152,9 +152,9 @@
               {% include blocks/ms-tags-filter-sublist.html %}
 
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                  <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 0;" data-flex="0">
+                  <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 0.05;" data-flex="0.05">
                     <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
-                      <i class="itemBoxTable__action itemBoxTable__action--toggle">Incl</i>
+                      <i class="itemBoxTable__action itemBoxTable__action--toggle">Include</i>
                     </div>
                   </li>
                   <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
@@ -177,9 +177,9 @@
               {% include blocks/ms-tags-filter-sublist.html %}
 
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                  <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 0;" data-flex="0">
+                  <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 0.05;" data-flex="0.05">
                     <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
-                      <i class="itemBoxTable__action itemBoxTable__action--toggle">Excl</i>
+                      <i class="itemBoxTable__action itemBoxTable__action--toggle">Exclude</i>
                     </div>
                   </li>
                   <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
@@ -202,9 +202,9 @@
               {% include blocks/ms-tags-filter-sublist.html %}
 
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                  <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 0;" data-flex="0">
+                  <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 0.05;" data-flex="0.05">
                     <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
-                      <i class="itemBoxTable__action itemBoxTable__action--toggle">Excl</i>
+                      <i class="itemBoxTable__action itemBoxTable__action--toggle">Exclude</i>
                     </div>
                   </li>
                   <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
