Filter: added tick if something is selected in incl/excl

--- a/_includes/blocks/ms-tags-filter-sublist.html
+++ b/_includes/blocks/ms-tags-filter-sublist.html
@@ -3,14 +3,14 @@
     <div class="itemBoxBody">
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-          <div class="itemBoxTable__bodyCellInner">
+          <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclExcl" data-filter="Include">
             Include
           </div>
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-          <div class="itemBoxTable__bodyCellInner">
+          <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclExcl" data-filter="Exclude">
             Exclude
           </div>
         </li>
