--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -129,7 +129,7 @@
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 0.05;" data-flex="0.05">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
-                    <i class="itemBoxTable__action itemBoxTable__action--toggle">Include</i>
+                    <i class="itemBoxTable__action itemBoxTable__action--toggle" data-filter="Include">Include</i>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
@@ -154,7 +154,7 @@
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                   <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 0.05;" data-flex="0.05">
                     <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
-                      <i class="itemBoxTable__action itemBoxTable__action--toggle">Include</i>
+                      <i class="itemBoxTable__action itemBoxTable__action--toggle" data-filter="Include">Include</i>
                     </div>
                   </li>
                   <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
@@ -179,7 +179,7 @@
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                   <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 0.05;" data-flex="0.05">
                     <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
-                      <i class="itemBoxTable__action itemBoxTable__action--toggle">Exclude</i>
+                      <i class="itemBoxTable__action itemBoxTable__action--toggle" data-filter="Exclude">Exclude</i>
                     </div>
                   </li>
                   <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
@@ -204,7 +204,7 @@
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                   <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 0.05;" data-flex="0.05">
                     <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
-                      <i class="itemBoxTable__action itemBoxTable__action--toggle">Exclude</i>
+                      <i class="itemBoxTable__action itemBoxTable__action--toggle" data-filter="Exclude">Exclude</i>
                     </div>
                   </li>
                   <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
